# assert-migrator-reversible

./: .gitignore  Cargo.toml  README.md
scripts/: start-postgres.sh  stop-postgres.sh
src/: assert_migrator_is_reversible.rs  assert_migrator_reversible.rs  db_connection.rs  lib.rs  test_migrator_is_reversible.rs
src/queries/: get_table_names.rs  get_table_schemas.rs  get_type_schemas.rs  ignored_tables.rs  mod.rs  new_test_db_connection.rs
src/queries/get_table_schemas/: postgres.rs  sqlite.rs
src/queries/get_type_schemas/: postgres.rs
tests/sql_tests/: main.rs
tests/sql_tests/example_migrations/: m1_example_working_migration.rs  m2_example_broken_migration.rs  m2_example_working_migration.rs  m3_example_working_migration.rs  mod.rs
tests/sql_tests/example_migrators/: example_broken_migrator.rs  example_working_migrator.rs  mod.rs
