[package]
name = "assert-migrator-reversible"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "For testing if Sea Orm Migrators are reversible"
keywords = ["database", "testing", "test", "sea-orm", "sea_orm"]
categories = ["database", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/assert-migrator-reversible"
readme = "https://github.com/JosephLenton/assert-migrator-reversible#readme"
documentation = "docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"

[features]
default = ["tokio"]
tokio = ["dep:tokio"]

[dependencies]
sea-orm-migration = { version = "^0.9.0", features = [ "runtime-tokio-rustls", "sqlx-sqlite" ] }
tokio = { version = "^1.21.2", features = ["rt", "time"], optional = true }

[dev-dependencies]
panic-message = "0.3.0"
