[package]
name = "assert-migrator-reversible"
version = "1.0.0"
edition = "2021"
license = "MIT"
description = "For testing if Sea Orm Migrators are reversible"
keywords = ["database", "testing", "test", "sea-orm", "sea_orm"]
categories = ["database", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/assert-migrator-reversible"
readme = "README.md"
documentation = "https://docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"

[features]
default = ["tokio", "sqlx-sqlite", "runtime-tokio-native-tls"]
tokio = ["dep:tokio"]

sqlx-mysql = ["sea-orm-migration/sqlx-mysql"]
sqlx-postgres = ["sea-orm-migration/sqlx-postgres"]
sqlx-sqlite = ["sea-orm-migration/sqlx-sqlite"]
runtime-actix-native-tls = ["sea-orm-migration/runtime-actix-native-tls"]
runtime-async-std-native-tls = ["sea-orm-migration/runtime-async-std-native-tls"]
runtime-tokio-native-tls = ["sea-orm-migration/runtime-tokio-native-tls"]
runtime-actix-rustls = ["sea-orm-migration/runtime-actix-rustls"]
runtime-async-std-rustls = ["sea-orm-migration/runtime-async-std-rustls"]
runtime-tokio-rustls = ["sea-orm-migration/runtime-tokio-rustls"]

[dependencies]
sea-orm-migration = { version = "^0.9.0", default-features = false }
tokio = { version = "^1.21.2", features = ["rt", "time"], optional = true }

[dev-dependencies]
panic-message = "0.3.0"
