[package]
name = "assert-migrator-reversible"
version = "4.1.0"
edition = "2021"
license = "MIT"
description = "For testing if Sea Orm Migrators are reversible"
keywords = ["database", "testing", "test", "sea-orm", "sea_orm"]
categories = ["database", "development-tools::testing"]
authors = ["josephlenton@gmail.com <josephlenton@gmail.com>"]
repository = "https://github.com/JosephLenton/assert-migrator-reversible"
readme = "README.md"
documentation = "https://docs.rs/assert-migrator-reversible/latest/assert-migrator-reversible"

[features]
default = ["tokio", "runtime-tokio-rustls"]
tokio = ["dep:tokio"]

runtime-actix-native-tls = ["sea-orm-migration/runtime-actix-native-tls"]
runtime-actix-rustls = ["sea-orm-migration/runtime-actix-rustls"]
runtime-async-std-native-tls = ["sea-orm-migration/runtime-async-std-native-tls"]
runtime-async-std-rustls = ["sea-orm-migration/runtime-async-std-rustls"]
runtime-tokio-native-tls = ["sea-orm-migration/runtime-tokio-native-tls"]
runtime-tokio-rustls = ["sea-orm-migration/runtime-tokio-rustls"]

[dependencies]
sea-orm-migration = { version = "0.11", features = ["sqlx-sqlite", "sqlx-postgres"] }
tokio = { version = "1.28", features = ["rt", "time"], optional = true }

[dev-dependencies]
panic-message = "0.3.0"
